--- a/rabbitmq-task/src/main/resources/application-test.properties
+++ b/rabbitmq-task/src/main/resources/application-test.properties
@@ -12,3 +12,18 @@ spring.rabbitmq.publisher-returns=true
 #消费端消息确认，开启ACK
 spring.rabbitmq.listener.direct.acknowledge-mode=manual
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
+
+
+#mongodb配置信息
+spring.data.mongodb.uri=mongodb://myAdmin:666666@127.0.0.1/admin
+#注册中心地址
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#spring cloud
+#健康检测
+eureka.client.healthcheck.enabled=true
+#使用IP注册服务
+eureka.instance.prefer-ip-address=true
+#服务心跳的调用间隔，秒
+eureka.instance.lease-renewal-interval-in-seconds=40
+#服务失效的时间，秒
+eureka.instance.lease-expiration-duration-in-seconds=90
