--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8761
 spring.application.name=eureka-server
 
 #注册中心地址
-eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 # 是否从其他Eureka注册中心同步服务列表（单节点无需配置启用）
-eureka.client.fetch-registry = false
+eureka.client.fetch-registry = true
 # 是否将自己作为服务注册到其他Eureka服务注册中心（单节点无需配置启用）
-eureka.client.register-with-eureka = false
+eureka.client.register-with-eureka = true
