--- a/rabbitmq-task/pom.xml
+++ b/rabbitmq-task/pom.xml
@@ -28,6 +28,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <!--引入 ribbon 依赖-->
+        <dependency>
+            <groupId>com.netflix.ribbon</groupId>
+            <artifactId>ribbon</artifactId>
+            <version>2.2.2</version>
+        </dependency>
 
         <!--引入model依赖-->
         <dependency>
