--- a/rabbitmq-task/src/main/resources/test/rabbitmq.properties
+++ b/rabbitmq-task/src/main/resources/test/rabbitmq.properties
@@ -1,18 +1,18 @@
 #定义消息队列属性
-rabbitmq.quene[0].name=orderQueue
-rabbitmq.quene[0].monitor=true
-rabbitmq.quene[0].handler=orderHandler
-rabbitmq.quene[0].exchange=orderExchange
-rabbitmq.quene[0].key=order.routingkey
-rabbitmq.quene[0].autoack=false
-rabbitmq.quene[0].durable=true
-rabbitmq.quene[0].concurrentConsumers=4
+rabbitmq.queue[0].name=orderQueue
+rabbitmq.queue[0].monitor=true
+rabbitmq.queue[0].handler=orderHandler
+rabbitmq.queue[0].exchange=orderExchange
+rabbitmq.queue[0].key=order.routingkey
+rabbitmq.queue[0].autoack=false
+rabbitmq.queue[0].durable=true
+rabbitmq.queue[0].concurrentConsumers=1
 
-rabbitmq.quene[1].name=repayPlanQueue
-rabbitmq.quene[1].monitor=true
-rabbitmq.quene[1].handler=repayPlanHandler
-rabbitmq.quene[1].exchange=repayPlanExchange
-rabbitmq.quene[1].key=repayPlan.routingkey
-rabbitmq.quene[1].autoack=true
-rabbitmq.quene[1].durable=true
-rabbitmq.quene[1].concurrentConsumers=1
+rabbitmq.queue[1].name=repayPlanQueue
+rabbitmq.queue[1].monitor=true
+rabbitmq.queue[1].handler=repayPlanHandler
+rabbitmq.queue[1].exchange=repayPlanExchange
+rabbitmq.queue[1].key=repayPlan.routingkey
+rabbitmq.queue[1].autoack=true
+rabbitmq.queue[1].durable=true
+rabbitmq.queue[1].concurrentConsumers=1
