--- a/api/src/main/resources/application-test.properties
+++ b/api/src/main/resources/application-test.properties
@@ -15,11 +15,21 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761//eureka/
 #spring cloud
 #健康检测
 eureka.client.healthcheck.enabled=true
-#使用IP注册服务
-eureka.instance.prefer-ip-address=true
-#服务心跳的调用间隔，秒
-eureka.instance.lease-renewal-interval-in-seconds=100
-#服务失效的时间，秒
-eureka.instance.lease-expiration-duration-in-seconds=180
 # 将Feign接口的日志级别设置为DEBUG，因为Feign的Logger.Level只针对DEBUG做出响应
 logging.level.com.tianfu.collection.feign=DEBUG
+#################  hystrix配置 优化 ##############
+#开启熔断
+feign.hystrix.enabled=true
+hystrix.threadpool.default.coreSize=500
+
+rabbitmq-task.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RoundRobinRule
+
+
+#设置undertowIO线程数，它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程,不要设置过大，如果过大，启动项目会报错：打开文件数过多
+server.undertow.io-threads=16
+#阻塞任务线程池, 当执行类似servlet请求阻塞IO操作, undertow会从这个线程池中取得线程,它的值设置取决于系统线程执行任务的阻塞系数，默认值是IO线程数*8
+server.undertow.worker-threads=200
+#以下的配置会影响buffer,这些buffer会用于服务器连接的IO操作,有点类似netty的池化内存管理,每块buffer的空间大小,越小的空间被利用越充分，不要设置太大，以免影响其他应用，合适即可
+server.undertow.buffer-size=1024
+#是否分配的直接内存(NIO直接分配的堆外内存)
+server.undertow.direct-buffers=true
