--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -6,5 +6,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.typeAliasesPackage=com.model.generate
 #mybatis xml文件路径
 mybatis.mapper-locations=classpath*:mybatis/mapper/*.xml
+
+spring.cache.ehcache.config=classpath:/ehcache/ehcache.xml
+
 #启动模式
 spring.profiles.active=test
