--- a/api/src/main/resources/application-test.properties
+++ b/api/src/main/resources/application-test.properties
@@ -2,12 +2,16 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-
 spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.idle-timeout=120000
 #项目端口
 server.port=8081
+
+#热部署生效
+spring.devtools.restart.enabled= true
+#设置重启的目录
+spring.devtools.restart.additional-paths= src/main/java
 
 #注册中心地址
 eureka.client.serviceUrl.defaultZone=http://localhost:8761//eureka/
