--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=eureka-server
 #注册中心地址
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 # 是否从其他Eureka注册中心同步服务列表（单节点无需配置启用）
-eureka.client.fetch-registry = true
+eureka.client.fetch-registry = false
 # 是否将自己作为服务注册到其他Eureka服务注册中心（单节点无需配置启用）
-eureka.client.register-with-eureka = true
+eureka.client.register-with-eureka = false
 
 
 #设置undertowIO线程数，它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程,不要设置过大，如果过大，启动项目会报错：打开文件数过多
