--- a/api/src/main/resources/application-test.properties
+++ b/api/src/main/resources/application-test.properties
@@ -14,19 +14,29 @@ spring.devtools.restart.enabled= true
 spring.devtools.restart.additional-paths= src/main/java
 
 #注册中心地址
-eureka.client.serviceUrl.defaultZone=http://localhost:8761//eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 #spring cloud
 #健康检测
 eureka.client.healthcheck.enabled=true
 # 将Feign接口的日志级别设置为DEBUG，因为Feign的Logger.Level只针对DEBUG做出响应
 logging.level.com.tianfu.collection.feign=DEBUG
-#################  hystrix配置 优化 ##############
+#################  feign配置 优化 ##############
 #开启熔断
 feign.hystrix.enabled=true
+#连接超时时间
+feign.client.config.default.connect-timeout=5000
+#读取超时时间
+feign.client.config.default.read-timeout=5000
+
+#################  hystrix配置 优化 ##############
+
 hystrix.threadpool.default.coreSize=500
 rabbitmq-task.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.RoundRobinRule
-
+#使用Apache HttpClient连接超时时间，单位为毫秒
+rabbitmq-task.ribbon.ConnectTimeout=3000
+#使用Apache HttpClient读取的超时时间，单位为毫秒
+rabbitmq-task.ribbon.ReadTimeout=3000
 
 #设置undertowIO线程数，它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程,不要设置过大，如果过大，启动项目会报错：打开文件数过多
 server.undertow.io-threads=16
