--- a/rabbitmq-task/pom.xml
+++ b/rabbitmq-task/pom.xml
@@ -28,10 +28,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
-        <!--引入model依赖-->
+        <!-- data-gateway包依赖 -->
         <dependency>
             <groupId>com.endure.demo</groupId>
-            <artifactId>model</artifactId>
+            <artifactId>data-gateway</artifactId>
         </dependency>
 
         <dependency>
@@ -39,6 +39,8 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+
+
     </dependencies>
 
 </project>
