--- a/rabbitmq-task/src/main/resources/test/rabbitmq.properties
+++ b/rabbitmq-task/src/main/resources/test/rabbitmq.properties
@@ -6,7 +6,8 @@ rabbitmq.queue[0].exchange=orderExchange
 rabbitmq.queue[0].key=order.routingkey
 rabbitmq.queue[0].autoack=false
 rabbitmq.queue[0].durable=true
-rabbitmq.queue[0].concurrentConsumers=1
+rabbitmq.queue[0].concurrentConsumers=3 #并发处理消息个数，即线程数
+rabbitmq.queue[0].prefetchCount=1 #单次从队列中获取消息个数
 
 rabbitmq.queue[1].name=repayPlanQueue
 rabbitmq.queue[1].monitor=true
@@ -15,4 +16,5 @@ rabbitmq.queue[1].exchange=repayPlanExchange
 rabbitmq.queue[1].key=repayPlan.routingkey
 rabbitmq.queue[1].autoack=true
 rabbitmq.queue[1].durable=true
-rabbitmq.queue[1].concurrentConsumers=1
+rabbitmq.queue[1].concurrentConsumers=1 
+rabbitmq.queue[1].prefetchCount=1
