--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 #项目名称
 spring.application.name=api
+#启动端口
+server.port=8082
 #数据库驱动
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #mybatis实体类路径
