--- a/pom.xml
+++ b/pom.xml
@@ -47,15 +47,6 @@
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis-spring-boot.version}</version>
             </dependency>
-            <!--SpringCloud依赖版本管理-->
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
             <!--model依赖版本管理 -->
             <dependency>
                 <groupId>com.endure.demo</groupId>
@@ -107,9 +98,9 @@
     <dependencies>
         <!-- springboot-->
         <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <!-- FastJson 依赖 -->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -119,10 +110,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
         </dependency>
         <!--单元测试-->
         <dependency>
@@ -157,6 +144,7 @@
         <module>eureka-server</module>
         <module>data-gateway</module>
         <module>rabbitmq-task</module>
+        <module>zuul</module>
     </modules>
 
 </project>
