--- a/rabbitmq-task/src/main/resources/application-test.properties
+++ b/rabbitmq-task/src/main/resources/application-test.properties
@@ -12,14 +12,19 @@ spring.rabbitmq.publisher-returns=true
 #消费端消息确认，开启ACK
 spring.rabbitmq.listener.direct.acknowledge-mode=manual
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
-
-#mongodb配置信息
-spring.data.mongodb.uri=mongodb://myAdmin:666666@127.0.0.1/admin
 #注册中心地址
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 #spring cloud
 #健康检测
 eureka.client.healthcheck.enabled=true
+
+feign.hystrix.enabled=true
+feign.compression.request.enabled=true
+feign.compression.request.mime-types=text/xml,application/xml,application/json
+feign.compression.response.enabled=true
+feign.httpclient.enabled=true
+feign.httpclient.max-connections=1000
+feign.httpclient.max-connections-per-route=200
 
 ################# Servlet 容器 优化 ##############
 #设置undertowIO线程数，它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程,不要设置过大，如果过大，启动项目会报错：打开文件数过多
