--- a/api/src/main/resources/application-test.yml
+++ b/api/src/main/resources/application-test.yml
@@ -8,47 +8,15 @@ spring:
       minimum-idle: 1
       maximum-pool-size: 5
       idle-timeout: 120000
+  redis:
+    host: 127.0.0.1
+    port: 6379
 #eureka配置
 eureka:
   client:
     serviceUrl.defaultZone: http://localhost:8761/eureka/
     healthcheck:
       enabled: true #健康监测
-#feign配置优化
-feign:
-  hystrix:
-    enabled: true #开启熔断
-  compression:
-    request:
-      enabled: true #启用feign压缩
-      mime-types: text/xml,application/xml,application/json
-    response:
-      enabled: true
-  httpclient: #
-    enabled: true
-    max-connections: 1000 #连接池最大连接数
-    max-connections-per-route: 200 #设置路由的默认最大连接
-#hystrix配置优化
-hystrix:
-  threadpool:
-    default:
-      coreSize: 500 #核心线程池数量
-  command:
-    default:
-      circuitBreaker:
-        requestVolumeThreshold: 1000 #该属性用来设置在请求处理超时时间中，断路器熔断的最小请求数
-      fallback:
-        enabled: true #是否开启回退方法
-      execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 100000 #请求处理的超时时间
-#ribbon配置优化
-rabbitmq-task:
-  ribbon:
-    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RoundRobinRule # 轮询规则
-    ConnectTimeout: 3000 #连接超时时间，单位为毫秒
-    ReadTimeout: 3000 #读取的超时时间，单位为毫秒
 server:
   undertow:
     io-threads: 16 #设置undertowIO线程数，它主要执行非阻塞的任务,它们会负责多个连接, 默认设置每个CPU核心一个线程,不要设置过大，如果过大，启动项目会报错：打开文件数过多
