--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <api.version>0.0.1-SNAPSHOT</api.version>
         <dao.version>0.0.1-SNAPSHOT</dao.version>
         <service.version>0.0.1-SNAPSHOT</service.version>
-        <data-gateway.version>0.0.1-SNAPSHOT</data-gateway.version>
+        <feign-service.version>0.0.1-SNAPSHOT</feign-service.version>
         <model.version>0.0.1-SNAPSHOT</model.version>
         <core.version>0.0.1-SNAPSHOT</core.version>
         <java.version>1.8</java.version>
@@ -65,11 +65,11 @@
                 <artifactId>service</artifactId>
                 <version>${service.version}</version>
             </dependency>
-            <!--data-gateway依赖版本管理 -->
+            <!--feign-service依赖版本管理 -->
             <dependency>
                 <groupId>com.endure.demo</groupId>
-                <artifactId>data-gateway</artifactId>
-                <version>${data-gateway.version}</version>
+                <artifactId>feign-service</artifactId>
+                <version>${feign-service.version}</version>
             </dependency>
             <!--dao依赖版本管理 -->
             <dependency>
@@ -142,7 +142,7 @@
         <module>model</module>
         <module>core</module>
         <module>eureka-server</module>
-        <module>data-gateway</module>
+        <module>feign-service</module>
         <module>rabbitmq-task</module>
         <module>zuul</module>
     </modules>
