--- a/zuul/pom.xml
+++ b/zuul/pom.xml
@@ -22,6 +22,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.endure.demo</groupId>
+            <artifactId>core</artifactId>
+        </dependency>
 
     </dependencies>
 
