--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -10,6 +10,7 @@ eureka:
 zuul:
   host:
     connect-timeout-millis: 30000 #请求连接的超时时间
+    socket-timeout-millis: 60000   #socket超时
   routes:
     task:  #路径id  随意写，如果不指定serviceId，默认此路径为服务名
       path: /zuulTask/**   #映射路径
@@ -19,11 +20,20 @@ zuul:
       serviceId: api
 
   retryable: true
+  rabbitmq-task:
+    ribbon:
+      NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RoundRobinRule #指定轮询规则
+      ConnectTimeout: 2500 # 连接超时时间(ms)
+      ReadTimeout: 2000 # 通信超时时间(ms)
+      OkToRetryOnAllOperations: true # 是否对所有操作重试
+      MaxAutoRetriesNextServer: 2 # 同一服务不同实例的重试次数
+      MaxAutoRetries: 1 # 同一实例的重试次数
+
   api:
     ribbon:
       NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RoundRobinRule #指定轮询规则
-      ConnectTimeout: 250 # 连接超时时间(ms)
-      ReadTimeout: 200 # 通信超时时间(ms)
+      ConnectTimeout: 2500 # 连接超时时间(ms)
+      ReadTimeout: 2000 # 通信超时时间(ms)
       OkToRetryOnAllOperations: true # 是否对所有操作重试
       MaxAutoRetriesNextServer: 2 # 同一服务不同实例的重试次数
       MaxAutoRetries: 1 # 同一实例的重试次数
@@ -44,4 +54,4 @@ hystrix:
       execution:
         isolation:
           thread:
-            timeoutInMilliseconds: 100000 #请求处理的超时时间
+            timeoutInMilliseconds: 20000 #请求处理的超时时间
