--- a/rabbitmq-task/src/main/resources/application-test.yml
+++ b/rabbitmq-task/src/main/resources/application-test.yml
@@ -1,4 +1,9 @@
 spring:
+  #redis相关配置
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    password: 123456
   #rabbitmq配置
   rabbitmq:
     host: 127.0.0.1
