--- a/zuul/pom.xml
+++ b/zuul/pom.xml
@@ -27,10 +27,11 @@
             <artifactId>core</artifactId>
         </dependency>
 
+        <!--注入properties文件读取lib-->
         <dependency>
-            <groupId> org.springframework.boot </groupId>
-            <artifactId> spring-boot-configuration-processor </artifactId>
-            <optional> true </optional>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
