--- a/api/src/main/resources/test/redis.properties
+++ b/api/src/main/resources/test/redis.properties
@@ -1,8 +1,10 @@
-# 商品秒杀加锁key
-redis.redisSpikeSkillKey=spikeSkill
-# zuul商品秒杀限流key
-redis.zuulRateLimitKey=product_key
 # redis分布锁有效期
 redis.lockExpireTime=10000
 # redis分布锁获取超时时间
 redis.lockTimeout=11000
+# 商品秒杀加锁key
+redis.redisSpikeSkillKey=spikeSkill
+# zuul商品秒杀限流key
+redis.zuulRateLimitKey=product_key
+#商品库存key
+redis.stockKey=stock_key
