activiti工作流简单整合

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -17,5 +17,11 @@
             <groupId>com.endure.demo</groupId>
             <artifactId>dao</artifactId>
         </dependency>
+        <!--引入activity工作流依赖-->
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>activiti-spring-boot-starter-basic</artifactId>
+            <version>6.0.0</version>
+        </dependency>
     </dependencies>
 </project>
