--- a/api/src/main/resources/application-test.yml
+++ b/api/src/main/resources/application-test.yml
@@ -1,9 +1,10 @@
 #datasource配置
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/test?useUnicode=true&nullCatalogMeansCurrent=true&characterEncoding=UTF-8&serverTimezone=UTC
     username: root
     password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       minimum-idle: 1
       maximum-pool-size: 5
@@ -13,6 +14,10 @@ spring:
     host: 127.0.0.1
     port: 6379
     password: 123456
+  #activiti配置
+  activiti:
+    database-schema-update: true #设置流程引擎启动或关闭更新数据库表，如果不存在则自动创建（其他策略：false，create-drop，drop-create）
+    history-level: full #保存历史数据级别设置为最高，以便历史数据追溯（其他级别：none，activity，audit）
 #eureka配置
 eureka:
   client:
