--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
         <mybatis-spring-boot.version>1.3.2</mybatis-spring-boot.version>
         <fastjson.version>1.2.62</fastjson.version>
         <shiro.version>1.4.0</shiro.version>
+        <swagger.version>2.9.2</swagger.version>
+        <lombok.version>1.18.10</lombok.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -91,6 +93,18 @@
                 <artifactId>shiro-spring</artifactId>
                 <version>${shiro.version}</version>
             </dependency>
+            <!--swagger版本管理-->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
+            <!--swagger版本管理-->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${swagger.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -133,6 +147,24 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
+        <!--增加swagger依赖-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
     <modules>
         <module>api</module>
