--- a/api/pom.xml
+++ b/api/pom.xml
@@ -57,4 +57,18 @@
             <optional>true</optional>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
+    <properties>
+        <start-class>com.ApiApplication</start-class>
+    </properties>
+
 </project>
