--- a/api/src/main/resources/test/redis.properties
+++ b/api/src/main/resources/test/redis.properties
@@ -1,10 +1,10 @@
-# redis分布锁有效期
+# redis\u5206\u5E03\u9501\u6709\u6548\u671F
 redis.lockExpireTime=10000
-# redis分布锁获取超时时间
+# redis\u5206\u5E03\u9501\u83B7\u53D6\u8D85\u65F6\u65F6\u95F4
 redis.lockTimeout=11000
-# 商品秒杀加锁key
+# \u5546\u54C1\u79D2\u6740\u52A0\u9501key
 redis.redisSpikeSkillKey=spikeSkill
-# zuul商品秒杀限流key
+# zuul\u5546\u54C1\u79D2\u6740\u9650\u6D41key
 redis.zuulRateLimitKey=product_key
-#商品库存key
+#\u5546\u54C1\u5E93\u5B58key
 redis.stockKey=stock_key
